samples/_failures_safe/1761146536_ce24d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_513a0332.c: In function ‘main’:
./samples/SAFE/__tmp_513a0332.c:149:5: error: expected expression at end of input
  149 |     if (london < 0 || paris < 0 || berlin < 0 ||
      |     ^~
./samples/SAFE/__tmp_513a0332.c:149:5: error: expected declaration or statement at end of input
